# legal-symmetries

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
.control/: repo.yaml
docs/: civil-germanic.html  civil-napoleonic.html  common-law.html  dictionary.html  east-asian.html  exhibit.html  index.html  international.html  islamic.html  missing-words.html  nordic.html  other-traditions.html
docs/assets/: style.css
research/: framework.md
research/dictionary/: all_terms.md
research/jurisdictions/civil_germanic/: germany.md
research/jurisdictions/civil_napoleonic/: france.md
research/jurisdictions/common_law/: us_intestacy.md
research/jurisdictions/east_asian/: overview.md
research/jurisdictions/international/: overview.md
research/jurisdictions/islamic/: overview.md
research/jurisdictions/nordic/: sweden.md
research/jurisdictions/other_traditions/: overview.md
research/synthesis/: missing_words.md
